--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -8,7 +8,7 @@ on:
       - 'data/raw/**'
       - 'etl/**'
       - 'Makefile'
-      - 'requirements.txt'
+      - 'requirements-ci.txt'
 
 jobs:
   etl:
@@ -26,16 +26,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements-ci.txt
         pip install dvc
-
-    - name: Configure DVC
-      run: |
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "github-actions[bot]"
-        dvc init
-        dvc remote add -d localstore ../dvc_storage
-        dvc pull
 
     - name: Run ETL pipeline
       run: |
@@ -49,5 +41,6 @@ jobs:
         git commit -m "Automated ETL: Update cleaned data" || echo "No changes to commit"
         dvc push
         git push origin main
+
 
 
